# university-nlp-news-fact-checking

./: README.md  main.py  result.md  tools.py
doc_gen/: crew.py  crew_commented.py  doc.md  gen_main.py  generation.py  test_output.txt
news_fact_check/: README.md  pyproject.toml
news_fact_check/src/news_fact_check/: crew.py  main.py
news_fact_check/src/news_fact_check/tools/: custom_tool.py
templates/: index.html  webpage.html
