[project]
name = "news_fact_check"
version = "0.1.0"
description = "news_fact_check using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0"
]

[project.scripts]
news_fact_check = "news_fact_check.main:run"
run_crew = "news_fact_check.main:run"
train = "news_fact_check.main:train"
replay = "news_fact_check.main:replay"
test = "news_fact_check.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
